--- a/gulp/src/index.html
+++ b/gulp/src/index.html
@@ -6,6 +6,7 @@
 	<link href="../css/index.css" rel="stylesheet">
 </head>
 <body>
+	@@include('pages/common/top.html')
 	<div class="box">我是gulp</div>
 	<div class="box">我是smallbore</div>
 	@@include('pages/common/top.html')
