--- a/gulp/src/index.html
+++ b/gulp/src/index.html
@@ -3,12 +3,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Document</title>
-	<link href="../css/index.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 </head>
 <body>
-	@@include('pages/common/top.html')
+	@@include('include/top.html')
 	<div class="box">我是gulp</div>
 	<div class="box">我是smallbore</div>
-	@@include('pages/common/top.html')
+	@@include('include/top.html')
+	<a href="pages/porc.html">tianzaung</a>
 </body>
 </html>
